--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -3,9 +3,12 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-<h1>JosueSalazar.com</h1>
-<p>Welcome to my personal web site! I am currently developing my own website using the Wagtail CMS under Django. My plans are to share my learning experiences and projects. For now you can know more about me in <a href="https://www.linkedin.com/in/josue-salazar-863a3716/" target="_blank">LinkedIn</a> and <a href="https://github.com/nitroctano" target="_blank">GitHub</a></p>
-<p>Have an awesome day!</p>
+<div class="container">
+  <div class="jumbotron">
+  <p>Welcome to my personal web site! I am currently developing my own website using the Wagtail CMS under Django. My plans are to share my learning experiences and projects. For now you can know more about me in <a href="https://www.linkedin.com/in/josue-salazar-863a3716/" target="_blank">LinkedIn</a> and <a href="https://github.com/nitroctano" target="_blank">GitHub</a></p>
+  <p>Have an awesome day!</p>
+  </div>
+</div>
 
 
 {% endblock %}
