--- a/home/templates/home/about_me.html
+++ b/home/templates/home/about_me.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% load wagtailcore_tags %}
-{% block body_class %}template-homepage{% endblock %}
+{% block body_class %}template-aboutme{% endblock %}
 
 {% block content %}
 <div class="container">
