Added a couple of new logos

--- a/MyWebSite/templates/base.html
+++ b/MyWebSite/templates/base.html
@@ -35,7 +35,7 @@
       {% wagtailuserbar %}
 
       <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light" role="navigation">
-  <a class="navbar-brand" href="{% url 'wagtail_serve' '' %}"><img src="{%static 'imgs/js_165x165.jpg'%}" alt="JosueSalazar.com" class="rounded"></a>
+  <a class="navbar-brand" href="{% url 'wagtail_serve' '' %}"><img src="{%static 'imgs/jslogo2.PNG'%}" alt="JosueSalazar.com" class="rounded"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
