--- a/blog/templates/blog/blog_page.html
+++ b/blog/templates/blog/blog_page.html
@@ -17,7 +17,33 @@
       {% image item.image fill-320x240 %}
       <p>{{ item.caption }}</p>
     </div>
-  {% endfor %}  
-  <p><a href="{{ page.get_parent.url }}">Return to blog</a></p>
+    {% endfor %}
+    <div style="clear:both">
+      <p><a href="{{ page.get_parent.url }}">Return to blogs</a></p>
+    </div>
 
-{% endblock %}
+    {% if page.tags.all.count %}
+    <div class="tags">
+      <h3>Tags</h3>
+      {% for tag in page.tags.all %}
+      <button type="button">{{ tag }}</button>
+      {% endfor %}
+    </div>
+    {% endif %}
+
+    {% with categories=page.categories.all %}
+
+    {% if categories %}
+    <h3>Categories</h3>
+    <ul>
+      {% for category in categories %}
+      <li style="display: inline">
+	{{ category.name }}
+      </li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+
+    {% endwith %}
+
+      {% endblock %}
